# AutoSites

./: .env.example  .gitignore  .mcp.json  MIGRATION.md  dev.sh  package.json
backend/: .env.example  .gitignore  README.md  env_bootstrap.py  pyproject.toml
backend/ai/: __init__.py  place_context.py  prompt.py  providers.py  runtime.py
backend/api/: __main__.py  deps.py  filters.py  main.py  pipeline_graph.py
backend/api/routes/: jobs.py  leads.py  ratings.py  runs.py  screenshots.py  strategy.py  tasks.py
backend/db/: connection.py  migrate.py
backend/db/migrations/: 0001_init.sql  0002_ai_tasks_task_type.sql  0003_ai_outputs_log_prompt.sql
backend/db/repos/: ai_outputs_log.py  ai_runs.py  ai_tasks.py  fields.py  job_logs.py  jobs.py  places.py
backend/deploy/: README.md  install.sh
backend/deploy/systemd/: backend-api.service  backend-worker.service
backend/jobs/: crawl_sites.py  extract_contacts.py  fetch_businesses.py  html_to_md.py
backend/scripts/: find_inspiration.py  migrate_from_json.py  seed_inspiration_queries_task.py  seed_inspiration_task.py  seed_variant_design_task.py  setup_variant_session.py
backend/tests/: test_browser_snapshot.py  test_extract_contacts.py  test_place_context_crawl.py
backend/workers/: browser_snapshot.py  dispatcher.py  event_bus.py  exporter.py  log_sink.py  logger.py  runner.py
backend/workers/handlers/: _subprocess.py  ai_task.py  crawl.py  extract_contacts.py  fetch_leads.py  find_inspiration.py  generate_inspiration_queries.py  html_to_md.py  variant_design.py  (+3 more)
mcp/autosites/: .env.example  pyproject.toml
(+660 files in other folders)
