[project]
name = "autosites-backend"
version = "0.1.0"
description = "Pi-hosted job runner + SQLite for AutoSites leads pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "google-genai>=1.0.0",
    "markitdown>=0.1.0",
    "patchright>=1.58.2",
    "browser-use>=0.1.40",
    "minify-html>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
