[project]
name = "autosites-mcp"
version = "0.1.0"
description = "Unified MCP server for AutoSites CRM (Pi backend) and Supabase CMS"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
]

[project.scripts]
autosites-mcp = "autosites_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autosites_mcp"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
